k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service

spec:
  type: NodePort

  selector:
    app: myapp

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
