k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: myapp-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: myapp.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: myapp-service

            port:
              number: 80
